samples/_failures_safe/1761605849_a31e85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50659fc4.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_50659fc4.c:151:16: error: missing terminating " character
  151 |         printf("Current state: %s, Data count:
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_50659fc4.c:151:9: error: expected expression at end of input
  151 |         printf("Current state: %s, Data count:
      |         ^~~~~~
./samples/SAFE/__tmp_50659fc4.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50659fc4.c:151:9: error: expected declaration or statement at end of input
